--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1863,6 +1863,328 @@
     "    print(checkpoint_path)\n",
     "    evaluate_model(loaded_model, test_loader, loss_fn, checkpoint_path.split('/')[1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad98aa0-d0c2-408c-8617-5b3858a18fa4",
+   "metadata": {},
+   "source": [
+    "# Benchmarking Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04aebb13-2c36-4c4c-9871-fd9ee581dead",
+   "metadata": {},
+   "source": [
+    "## Switching to GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "80aa47be-56f8-4938-b0bb-63df4f67bc02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# Move to GPU\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61e003b1-88f6-4fa0-867f-0432966e86fd",
+   "metadata": {},
+   "source": [
+    "## Define CNN Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e90fc0bf-d682-4085-82fb-03bb0842f539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torchvision import models\n",
+    "\n",
+    "def load_resnet50(num_classes):\n",
+    "    model =  models.resnet50(weights='ResNet50_Weights.DEFAULT')\n",
+    "    num_features = model.fc.in_features\n",
+    "    model.fc = nn.Linear(num_features, num_classes)\n",
+    "    return model\n",
+    "\n",
+    "def load_efficientnet_b0(num_classes):\n",
+    "    model = models.efficientnet_b0(weights='EfficientNet_B0_Weights.DEFAULT')\n",
+    "    num_features = model.classifier[1].in_features\n",
+    "    model.classifier[1] = nn.Linear(num_features, num_classes)\n",
+    "    return model\n",
+    "\n",
+    "def load_mobilenet_v2(num_classes):\n",
+    "    model = models.mobilenet_v2(weights='MobileNet_V2_Weights.DEFAULT')\n",
+    "    num_features = model.classifier[1].in_features\n",
+    "    model.classifier[1] = nn.Linear(num_features, num_classes)\n",
+    "    return model\n",
+    "\n",
+    "def load_mobilenet_v3_large(num_classes):\n",
+    "    model = models.mobilenet_v3_large(weights='MobileNet_V3_Large_Weights.DEFAULT')\n",
+    "    num_features = model.classifier[3].in_features\n",
+    "    model.classifier[3] = nn.Linear(num_features, num_classes)\n",
+    "    return model\n",
+    "\n",
+    "def load_mobilenet_v3_small(num_classes):\n",
+    "    model = models.mobilenet_v3_small(weights='MobileNet_V3_Small_Weights.DEFAULT')\n",
+    "    num_features = model.classifier[3].in_features\n",
+    "    model.classifier[3] = nn.Linear(num_features, num_classes)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd1e306f-256b-4f19-9246-16a982d21352",
+   "metadata": {},
+   "source": [
+    "## Load Benchmarking Test Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5baa04e2-ba1d-4639-9ad3-e80a1d82eb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from torchvision import datasets, transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "def create_test_dataloader(data_dir, batch_size, num_workers=4):\n",
+    "    # Define transformations for the test dataset\n",
+    "    data_transform = transforms.Compose([\n",
+    "        transforms.Resize((244, 244)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "    ])\n",
+    "\n",
+    "    # Create the test dataset\n",
+    "    test_dataset = datasets.ImageFolder(os.path.join(data_dir, 'Benchmarking'), transform=data_transform)\n",
+    "\n",
+    "    # Create the test dataloader\n",
+    "    test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
+    "\n",
+    "    return test_loader\n",
+    "\n",
+    "data_dir = 'Dataset/'\n",
+    "batch_size = 32\n",
+    "test_loader = create_test_dataloader(data_dir, batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "30f167ab-7f26-45eb-9a32-fbbd06b86263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn\n",
+    "from torchvision import models\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Function to load the model\n",
+    "def load_model(model_class, checkpoint_path, num_classes):\n",
+    "    model = model_class(num_classes=num_classes)\n",
+    "    model.load_state_dict(torch.load(checkpoint_path, map_location=device))\n",
+    "    model.eval()\n",
+    "    return model\n",
+    "    \n",
+    "def evaluate_model(model, test_loader, criterion):\n",
+    "    model.eval()\n",
+    "    test_loss = 0.0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    all_labels = []\n",
+    "    all_predictions = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in tqdm(test_loader, desc='Testing'):\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "\n",
+    "            outputs = model(inputs).squeeze(1)  # Output shape: [batch_size]\n",
+    "            loss = criterion(outputs, labels.float())  # Convert labels to float\n",
+    "\n",
+    "            test_loss += loss.item() * inputs.size(0)\n",
+    "\n",
+    "            # Apply sigmoid activation and classify based on threshold 0.5\n",
+    "            predicted = (torch.sigmoid(outputs) >= 0.5).float()\n",
+    "\n",
+    "            all_labels.extend(labels.cpu().numpy())\n",
+    "            all_predictions.extend(predicted.cpu().numpy())\n",
+    "\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "            total += labels.size(0)\n",
+    "\n",
+    "    test_loss = test_loss / len(test_loader.dataset)\n",
+    "    test_acc = correct / total\n",
+    "    print(f'Test Loss: {test_loss:.4f}, Test Accuracy: {test_acc*100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "92197e5f-b465-449f-801d-f3082546741b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of model loading functions\n",
+    "model_functions = [\n",
+    "    load_resnet50,\n",
+    "    load_mobilenet_v3_large,\n",
+    "    load_efficientnet_b0,\n",
+    "    load_mobilenet_v2,\n",
+    "    load_mobilenet_v3_small,\n",
+    "]\n",
+    "\n",
+    "checkpoint_paths = [\n",
+    "    'Checkpoints/resnet50/model_epoch_6.pth',\n",
+    "    'Checkpoints/mobilenet_v3_large/model_epoch_3.pth',\n",
+    "    'Checkpoints/efficientnet_b0/model_epoch_5.pth',\n",
+    "    'Checkpoints/mobilenet_v2/model_epoch_5.pth',\n",
+    "    'Checkpoints/mobilenet_v3_small/model_epoch_6.pth',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4bb30d0-7f8e-488f-bb95-48f5985892ba",
+   "metadata": {},
+   "source": [
+    "## Operate Benchmarking Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "afcc23c2-ff6d-4603-a16c-7cf482fbed91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checkpoints/resnet50/model_epoch_6.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|█████████████████████████████████████████████████████████████████████████| 29/29 [00:07<00:00,  3.97it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.0669, Test Accuracy: 97.18%\n",
+      "Checkpoints/mobilenet_v3_large/model_epoch_3.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|█████████████████████████████████████████████████████████████████████████| 29/29 [00:06<00:00,  4.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.1144, Test Accuracy: 97.72%\n",
+      "Checkpoints/efficientnet_b0/model_epoch_5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|█████████████████████████████████████████████████████████████████████████| 29/29 [00:06<00:00,  4.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.0603, Test Accuracy: 97.94%\n",
+      "Checkpoints/mobilenet_v2/model_epoch_5.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|█████████████████████████████████████████████████████████████████████████| 29/29 [00:06<00:00,  4.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.0251, Test Accuracy: 99.35%\n",
+      "Checkpoints/mobilenet_v3_small/model_epoch_6.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|█████████████████████████████████████████████████████████████████████████| 29/29 [00:06<00:00,  4.48it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.3331, Test Accuracy: 93.70%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_classes = 1\n",
+    "loss_fn = nn.BCEWithLogitsLoss()\n",
+    "\n",
+    "for get_model, checkpoint_path in zip(model_functions, checkpoint_paths):\n",
+    "    # Load the model using the function\n",
+    "    loaded_model = load_model(get_model, checkpoint_path, num_classes)\n",
+    "    loaded_model = loaded_model.to(device)\n",
+    "    # Evaluate the loaded model on the test set\n",
+    "    print(checkpoint_path)\n",
+    "    evaluate_model(loaded_model, test_loader, loss_fn)"
+   ]
   }
  ],
  "metadata": {
